# robin-fpga

./: .gitignore  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
configs/: agilex.yaml  benchmarks.yaml  cvar_sweep.yaml  default.yaml  versal.yaml
data/: README.md
data/benchmarks/: manifest.json
docs/: architecture.md  benchmarks.md  installation.md  reproduction.md  troubleshooting.md  usage.md
flows/: README.md
flows/quartus/: fit.tcl  sta.tcl  strategies.qsf  synthesis.tcl
flows/vivado/: place_route.tcl  reports.tcl  strategies.xdc  synth.tcl
notebooks/: 01_quickstart.ipynb  02_train_policy.ipynb  03_evaluation.ipynb  04_figure_generation.ipynb
paper/: BUILD.md  README.md  robin-fpga.tex
scripts/: benchmark.sh  evaluate.py  generate_figures.py  run_simulator.py  setup_env.sh  train.py
src/robin_fpga/: __init__.py  __version__.py  agent.py  conformal.py  cvar.py  data_loader.py  encoder.py  environment.py  evaluator.py  policy.py  simulator.py  trainer.py  utils.py  value.py
tests/: __init__.py  test_agent.py  test_conformal.py  test_cvar.py  test_encoder.py  test_environment.py
